# phishguard

./: LICENSE  README.md  brands.py  cli.py  setup.cfg  test_phishguard.py
phishguard/: brand_lookup.py  html_analysis.py  interactive.py
phishguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
