[metadata]
name = phishguard
version = 0.1.0
description = CLI and GitHub-friendly phishing detector for URLs, text, and fake social login pages.
long_description = file: README.md
long_description_content_type = text/markdown
author = PhishGuard
license = MIT
keywords = phishing, security, github-action, termux, kali
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
    Environment :: Console

[options]
packages = phishguard
python_requires = >=3.9
include_package_data = true
install_requires =
    rich>=13.0.0

[options.entry_points]
console_scripts =
    phishguard = phishguard.cli:main
